k8s/LAST/ingress-judge-0.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: judge0-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: judge.vishalmishra.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: judge0-service
            port:
              number: 2358
      - path: /submissions/([^/]+)
        pathType: ImplementationSpecific
        backend:
          service:
            name: judge0-service
            port:
              number: 2358
      - path: /submissions
        pathType: Prefix
        backend:
          service:
            name: judge0-service
            port:
              number: 2358
